--- a/resources/sass/spectrix.sass
+++ b/resources/sass/spectrix.sass
@@ -7,7 +7,7 @@ html
   font-size: .875em
 
 body
-  padding: $base-spacing 0 2 * $base-spacing
+  padding: $base-spacing $small-spacing/4 2 * $base-spacing
   max-width: 960px
 
 .ChooseSeats, .Basket2
